--- a/mavenproject/pom.xml
+++ b/mavenproject/pom.xml
@@ -34,7 +34,7 @@
           </suiteXmlFiles>
         </configuration>
       </plugin>
-     
+      
     </plugins>
   </build>
 
@@ -77,5 +77,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.18</version>
+</dependency>
   </dependencies>
 </project>
